--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: "Blog Title"
-author: "Blog Author"
+title: "Speech Project"
+author: "Ixxan"
 description: "Made with <b style=\"color: #f45;\">&lt;3</b>"
 permalink: /:title/
 lang: "en"
