--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: "Speech Project"
+title: "Blogs"
 author: "Ixxan"
-description: "Made with <b style=\"color: #f45;\">&lt;3</b>"
+description: "© 2024"
 permalink: /:title/
 lang: "en"
 excerpt_separator: "\n\n\n"
@@ -9,9 +9,9 @@ date_format: "%B %d, %Y"
 # Layout
 
 show_excerpts: true        # show article excerpts on the home page
-show_frame: true           # adds a gray frame to the site
+show_frame: false           # adds a gray frame to the site
 show_sidebar: false        # show a sidebar instead of the usual header
-minimal: false             # use a dark header
+minimal: true             # use a dark header
 
 # Menu
 
@@ -20,9 +20,8 @@ navigation:                # accepts {file, title, url, icon, sidebaricon}
   - {file: "README.md"}
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
-  - {title: Mail, icon: envelope, url: "mailto:niklasbuschmann@users.noreply.github.com"}
-  - {title: Github, icon: github, url: "https://github.com/niklasbuschmann/contrast"}
-  - {title: Subscribe, icon: rss, url: "/feed.xml"}
+  - {title: Mail, icon: envelope, url: "mailto:irpan.abdurahman32@gmail.com"}
+  - {title: Github, icon: github, url: "https://github.com/ixxan"}
 
 comments:
 #  disqus_shortname: ""    # see https://disqus.com/
