--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "Blogs"
 author: "Ixxan"
-description: "© 2024"
+description: "© 2024 Ixxan. All rights reserved."
 permalink: /:title/
 lang: "en"
 excerpt_separator: "\n\n\n"
