--- a/_config.yml
+++ b/_config.yml
@@ -21,8 +21,8 @@ navigation:                # accepts {file, title, url, icon, sidebaricon}
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
   - {title: Mail, icon: envelope, url: "mailto:irpan.abdurahman32@gmail.com"}
+  - {title: HuggingFace, icon: face-smile, url: "https://huggingface.co/ixxan"}
   - {title: Github, icon: github, url: "https://github.com/ixxan"}
-  - {title: HuggingFace, icon: face-smiling-hands, url: "https://huggingface.co/ixxan"}
 
 comments:
 #  disqus_shortname: ""    # see https://disqus.com/
