--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ navigation:                # accepts {file, title, url, icon, sidebaricon}
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
   - {title: Mail, icon: envelope, url: "mailto:irpan.abdurahman32@gmail.com"}
-  - {title: HuggingFace, icon: face-smile, url: "https://huggingface.co/ixxan"}
+  - {title: HuggingFace, icon: smile, url: "https://huggingface.co/ixxan"}
   - {title: Github, icon: github, url: "https://github.com/ixxan"}
 
 comments:
