--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: "Blogs"
-author: "Ixxan"
+author: "Irpan Abdurahman"
 description: "© 2024 Irpan Abdurahman."
 permalink: /:title/
 lang: "en"
